@@ -1,3 +1,12 @@
+2008-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	Make qcons able to produce "{UNION,INTERSECT,EXCEPT} ALL".
+
+	* scm/postgres-qcons.scm (parse+make-SELECT-tree compose): Arg
+	TYPE now a rest (dotted) arg; pass w/o change to `list-sep-proc'.
+	(parse+make-SELECT-tree): Handle #:union-all,
+	#:intersect-all and #:except-all, as well.
+
 2008-04-08  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	Small refactoring: Use macro `SCM_RETURN_NEWSMOB'.
